# RAG

./: .gitignore  README.md  books.jsonl  books_clean.jsonl  pyproject.toml  r.txt  typesense.ipynb
notebook/: basic_rag_test.ipynb  document.ipynb  fixed_rag_notebook.ipynb  new_fixed.ipynb
